
EXTRA_DIST = 					\
	triplet.hh				\
	readlinebuf.hh 				\
	vcore/callable.hh			\
	vcore/closure.hh 			\
	vcore/env.hh 				\
	vcore/exception.hh 			\
	vcore/module_base.hh			\
	vcore/module_loader.hh 			\
	vcore/object_catalog.hh 		\
	vcore/partial_call.hh			\
	vcore/streams.hh 			\
	vcore/interrupt_handler.hh 		\
	lazy/eval_visitor.hh			\
	lazy/exp.hh 				\
	lazy/exp.hxx 				\
	lazy/exp_base.hh 			\
	lazy/exp_base.hxx			\
	lazy/print_visitor.hh 			\
	lazy/vauc_constructs.hh 		\
	lazy/vauc_constructs.hxx		\
	lazy/visitor_base.hh 			\
	toplevel/parse.hh 			\
	toplevel/wrappers.hh			\
	types/object.hh 			\
	types/object.hxx 			\
	types/symbol.hh 			\
	types/symbol.hxx			\
	types/type.hh 				\
	constants/one.hh 			\
	constants/zero.hh 			\
	constants/inf.hh

